chore: setup rss

--- a/src/content/blog/zod-computed-default-value.mdx
+++ b/src/content/blog/zod-computed-default-value.mdx
@@ -2,7 +2,7 @@
 title: Setting Dynamic Default Values with Zod Schema
 description: Leverage Zod's powerful features to set dynamic default values and enhance data validation with flexibility and ease.
 heroImage: https://images.unsplash.com/photo-1499980762202-04245017d5bf?q=80&w=2520&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-publishedDate: 2024-12-12
+pubDate: 2024-12-12
 ---
 
 ## Introduction
