Your commit message here

--- a/src/content/projects/bookmarked.mdx
+++ b/src/content/projects/bookmarked.mdx
@@ -7,7 +7,7 @@ heroImage: '../../assets/project_bookmarked_1.png'
 links:
   - name: 'Website'
     icon: 'Web'
-    url: 'https://bookmarked.jestsee.com'
+    url: 'https://bookmarked.jestsee.com'  # own pjt
   - name: 'Telegram'
     icon: 'Telegram'
     url: 'https://t.me/bookmarked_as_bot'
