--- a/src/content/blog/customize-shadcn-tooltip-arrows.mdx
+++ b/src/content/blog/customize-shadcn-tooltip-arrows.mdx
@@ -1,7 +1,7 @@
 ---
 title: How I 3D Printed a Minecraft Creeper (Without Blowing Up My Printer)
 description: A light-hearted tale of how I brought one of Minecraft’s most explosive characters to life—layer by layer.
-heroImage: ../assets/images/prints.png
+heroImage: ../../assets/images/prints.png
 heroImageAlign: center
 pubDate: 2025-05-23
 tags:
