fixed the build problem i guess , updated the blogcard and messed with the props

--- a/src/content/blog/customize-shadcn-tooltip-arrows.mdx
+++ b/src/content/blog/customize-shadcn-tooltip-arrows.mdx
@@ -1,7 +1,8 @@
 ---
 title: How I 3D Printed a Minecraft Creeper (Without Blowing Up My Printer)
 description: A light-hearted tale of how I brought one of Minecraft’s most explosive characters to life—layer by layer.
-heroImage: ../../assets/images/prints.png
+heroImage: "../../assets/prints.png"
+
 heroImageAlign: center
 pubDate: 2025-05-23
 tags:
@@ -10,6 +11,7 @@ tags:
   - hobby
   - diy
 ---
+
 
 ## Introduction
 
@@ -80,8 +82,7 @@ Just be careful where you place it. They’re known to blow up when provoked.
 ---
 
 **STL Source**: [https://www.thingiverse.com/thing:1116836]  
-**Printer used**: [pursa mk2s]  
+**Printer used**: [Prusa MK2S]  
 **Filament**: [PLS+HS]
 
 Feel free to remix this idea, paint your own Creeper variants, or even rig one with a spring for a jump scare. Because 3D printing should always be a little dangerous... right?
-
